--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "tailwindcss": "^2.2.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
